<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.LoginChoiceActivity" android:background="?attr/colorPrimary">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/athena_white" android:id="@+id/splashImage"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="?attr/colorAccent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:transitionName="splashLogo"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/splashTitle"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="60sp" android:fontFamily="@font/font_greek" android:textColor="?attr/colorAccent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:padding="16dp"
            android:divider="@drawable/divider"
            android:dividerPadding="16dp" android:showDividers="middle"
            app:layout_constraintTop_toBottomOf="@+id/splashImage" app:layout_constraintVertical_bias="0.0">
        <com.anti049.athena.auth.ui.LoginButton
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:loginIcon="@drawable/icon_email"
                app:loginText="@string/login_email" app:loginTextColor="@color/colorBlack"
                app:loginColor="@color/colorWhite" app:loginTint="@color/colorBlack" android:id="@+id/loginEmail">
        </com.anti049.athena.auth.ui.LoginButton>
        <com.anti049.athena.auth.ui.LoginButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:loginColor="@color/common_google_signin_btn_text_dark_default"
                app:loginIcon="@drawable/googleg_standard_color_18" app:loginText="@string/login_google"
                app:loginTextColor="@color/colorBlack" android:id="@+id/loginGoogle"/>
        <com.anti049.athena.auth.ui.LoginButton
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:loginColor="@color/com_facebook_blue"
                app:loginIcon="@drawable/com_facebook_button_icon" app:loginText="@string/login_facebook"
                app:loginTextColor="@color/colorWhite" android:id="@+id/loginFacebook">
        </com.anti049.athena.auth.ui.LoginButton>
        <com.anti049.athena.auth.ui.LoginButton
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:loginColor="@color/colorBlack"
                app:loginText="@string/login_anonymous" app:loginIcon="@drawable/icon_anonymous"
                app:loginTextColor="@color/colorWhite" app:loginTint="@color/colorWhite"
                android:id="@+id/loginAnonymous"/>
        <com.anti049.athena.auth.ui.LoginButton
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:loginIcon="@drawable/icon_offline"
                app:loginColor="@color/colorBlack" app:loginText="@string/login_offline"
                app:loginTextColor="@color/colorLightGray" app:loginTint="@color/colorLightGray"
                android:id="@+id/loginOffline"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>